frontend/public/scss/home-page/featured-product-cards.scss
// TODO: `featured-product-section h1` should replace `course-section h1` in home.css on feature merge
.featured-product-section-container {
  width: 100%;
  max-width: unset;
  height: 32.5rem;
  padding: 0 !important;
  justify-content: center;
  margin: 0;
  overflow: hidden;
  position: relative;
  z-index:9;
  &:after {
    bottom: 0;
    -webkit-transform: skewY(-1.5deg);
    transform: skewY(-1.5deg);
    -webkit-transform-origin: 0 100%;
    transform-origin: 0 100%;
    height: 32.5rem;
    background: inherit;
    content: '';
    display: block;
    top: 0;
    left: 0;
    right: 0;
    z-index: -1;
    background-color: $home-page-grey-lite;
  }

  h1, h2, h3, h4, h5, h6 {
    font-family: Poppins, sans-serif;
    font-style: normal;
    line-height: normal;
    font-weight: 700;
  }
  p, a {
    font-family: Inter, sans-serif;
    font-style: normal;
    line-height: normal;
    font-weight: 400;
  }

  .featured-product-section {
    width: calc(100% - 100px);
    max-width: 1320px;
    flex-shrink: 0;
    flex-direction: column;
    align-self: center;
    align-items: center;
    position: absolute;
    @include media-breakpoint-down(sm) {
      width: 100%;
      height: 450px;
      background-color: $home-page-grey-lite;
    }
    .featured-product-header {
      max-width: 1320px;
      width: 100%;
      padding: 3rem 0 1.8rem 0;
      flex-shrink: 0;
      fill: $home-page-grey-lite;
      @include media-breakpoint-down(sm) {
        width: 100%;
        padding-top: 0;
        justify-content: space-between;
      }

      h3.featured-product-header-title {
        color: $home-page-header-blue;
        font-size: 25px;
        padding-left: 0;
        margin-bottom: 0;
        @include media-breakpoint-down(sm) {
          width: 176px;
          font-size: 18px;
          margin-left: 15px;
          margin-top: 30px;
        }
      }

      .featured-product-arrows {
        display: inline-flex;
        align-items: center;
        justify-content: flex-end;
        gap: 10px;
        padding: 0;
        @include media-breakpoint-down(sm) {
          margin-right: 15px;
          margin-top: 30px;
        }

        .arrow {
          display: flex;
          padding: 8px 15px;
          align-items: flex-start;
          gap: 10px;
          border-radius: 3px;
        }

        .next-arrow {
          border: 1px solid $home-page-dark-blue;
          background: $home-page-dark-blue;
        }

        .prev-arrow {
          border: 1px solid $home-page-border-grey;
          background: $home-page-border-grey;
        }
      }
    }

    .featured-product-listing {
      display: flex;
      margin: 36px 0 0 0;
      max-width: 1320px;
      width: 100%;
      height: 238px;
      justify-content: space-between;
      align-items: center;
      flex-shrink: 0;
      padding: 0 0 17px 0;

      @include media-breakpoint-down(sm) {
        width: 100%;
        padding-bottom: 0;
        margin-top: 0;
        padding-top: 2rem;
      }

      .carousel-content {
          width: 100%;
          gap: 20px;
          padding-bottom: 2rem;
        @include media-breakpoint-down(sm) {
          max-width: 100%;
        }

          a.featured-product-card-link {
            text-decoration: none;
            width: 25%;
            margin-right: 0;
            flex: 0 0 20%;
            display: block;
            height: 260.953px;
            padding-left: inherit;
            padding-right: inherit;
            transition: transform 0.6s linear;

            .featured-product-card {
              height: 100%;
              border-radius: 5px;
              flex-direction: column;
              align-items: center;
              border: 1px solid $home-page-grey-lite;
              background: #FFF;
              padding: 0;
              flex: none;
              box-shadow: 0 2px 3px 0 rgba(18, 38, 49, 0.15);
              @include media-breakpoint-down(sm) {
                padding: unset;
              }
              .featured-product-thumb {
                display: flex;
                position: relative;
                justify-content: center;
                border-radius: 5px;
                width: 100%;
                height: 10.6875rem;
              }

              img {
                width: 100%;
                height: 10.6875rem;
                border-radius: 5px 5px 0 0;
                background: rgba(0, 0, 0, 0.20);
                object-position: center;
                object-fit: cover;
              }
              .badge-program-type {
                display: inline-flex;
                padding: 8px 15px;
                align-items: flex-start;
                border-radius: 0px 3px 0px 0px;
                background: $home-page-header-blue;
                position: absolute;
                left: 0;
                bottom: 0;
                color: #FFF;
                font-size: 0.75rem;
                font-weight: 700;
                font-family: Inter, sans-serif;
              }
              .badge-program-type-none {
                background: transparent;
              }

              .featured-product-info {
                padding: 15px;
                display: flex;
                flex-direction: column;
                align-items: flex-start;
                gap: .31rem;
                align-self: stretch;

                p.date {
                  color: $home-page-grey-text;
                  font-size: 12px;
                  margin-bottom: 5px;
                  overflow: hidden;
                  align-self: stretch;
                  text-overflow: ellipsis;
                  font-weight: 400;
                }

                h2.featured-product-card-title {
                  height: 38px;
                  align-self: stretch;
                  color: $home-page-header-blue;
                  font-size: 0.875rem;
                  font-family: Inter, sans-serif;
                  margin-top: 0;
                  display: -webkit-box;
                  -webkit-line-clamp: 2;
                  -webkit-box-orient: vertical;
                  overflow: hidden;
                  line-height: 18px;
                }
                h2.featured-product-card-title.program-title {
                  height: 57.953px;
                }
              }
            }
          }
        }
      }

      @include media-breakpoint-down(sm) {
        .carousel-inner .carousel-item > div {
          display: none;
        }
        .carousel-inner .carousel-item > div:first-child {
          display: block;
        }
      }

      .carousel-inner .carousel-item.active,
      .carousel-inner .carousel-item-next,
      .carousel-inner .carousel-item-prev {
        display: flex;
      }
    }

    .featured-product-navigation {
      padding-bottom: 66px;
      display: flex;
      margin-top: 17px;
      width: 100%;
      @include media-breakpoint-down(sm) {
        width: 100%;
        margin-top: 30px;
        padding-bottom: 0;
        padding-left: 2.44rem;
        padding-right: 2.44rem;
      }

      a.view-catalog-button {
        display: flex;
        width: 250px;
        padding: 16px 25px;
        justify-content: center;
        border-radius: 3px;
        border: 1px solid $home-page-header-blue;
        color: $home-page-header-blue;
        text-align: center;
        font-size: 14px;
        font-weight: 700;
        margin: auto;
        text-decoration: none;
        @include media-breakpoint-down(sm) {
          width: 100%;
        }
      }
    }
}

